Bind Popup Bug Fix: nav-links overlap content pt. 4

--- a/views/css/search.css
+++ b/views/css/search.css
@@ -11,12 +11,15 @@ html, body {
     text-align: center;
     padding: 5px;
     margin-bottom: 10px;
+    display: inline;
 }
 
 .nav-links a{
     text-decoration: none;
     font-size: 20px;
 }
+
+
 
 .disclaimer {
     /* bottom: 0;
